--- a/sw.html
+++ b/sw.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <title>Swamy Vivekananda - QBasic</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://fample.cf/sw/logo.jpg">
+  </head>
   <body bgcolor="black">
     <iframe src="SWAMY VIVEKANANDA.exe"></iframe>
   </body>
